// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty form 1`] = `
Array [
  "Enter a project name",
  "Select a country",
  "Select one or more regions",
  "Tell us all of the locations that you'll be running your project in",
  "Enter a real postcode",
  "Enter a total cost for your project",
  "Tell us what you would like to do",
  "Tell us how your project involves your community",
  "Tell us how your idea fits in with other local activities",
  "Enter the full legal name of the organisation",
  "Tell us if your organisation uses a different name in your day-to-day work.",
  "Enter a full UK address",
  "Select a type of organisation",
  "Enter first and last name",
  "Enter an email address",
]
`;

exports[`invalid form 1`] = `
Array [
  "Enter a project name",
  "Select a country",
  "Select a location",
  "Tell us all of the locations that you'll be running your project in",
  "Enter a real postcode",
  "Select a project duration",
  "Tell us what you would like to do",
  "Tell us how your project involves your community",
  "Tell us how your idea fits in with other local activities",
  "Tell us if your organisation uses a different name in your day-to-day work.",
  "Enter a full UK address",
  "Select a type of organisation",
  "Enter first and last name",
  "Enter an email address",
]
`;

exports[`valid form 1`] = `
Object {
  "contactCommunicationNeeds": "Large print",
  "contactEmail": "general.enquiries@tnlcommunityfund.org.uk",
  "contactName": Object {
    "firstName": "Björk",
    "lastName": "Guðmundsdóttir",
  },
  "contactPhone": "028 9568 0143",
  "organisationAddress": Object {
    "county": "West Midlands",
    "line1": "1234 example street",
    "postcode": "B15 1TR",
    "townCity": "Birmingham",
  },
  "organisationDifferentName": "no",
  "organisationLegalName": "Example organisation",
  "organisationType": "not-for-profit-company",
  "projectCosts": 250000,
  "projectCountries": Array [
    "northern-ireland",
  ],
  "projectDurationYears": 1,
  "projectLocation": "ards-and-north-down",
  "projectLocationDescription": "description",
  "projectName": "My project",
  "projectPostcode": "B15 1TR",
  "yourIdeaActivities": Any<String>,
  "yourIdeaCommunity": Any<String>,
  "yourIdeaProject": Any<String>,
}
`;
